// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden plans > cold_start is unchanged 1`] = `
{
  "blocked_regions": [],
  "signature": "2dc30f15",
  "today": {
    "blocks": [
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "warmup",
        "minutes": 5,
        "title": "Warm-up",
      },
      {
        "cardio": {
          "bpm": [
            164,
            177,
          ],
          "minutes": 30,
          "modality": "run",
          "structure": "intervals",
        },
        "exercises": [],
        "kind": "conditioning",
        "minutes": 30,
        "title": "8 × 2 min",
      },
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "cooldown",
        "minutes": 5,
        "title": "Cool-down",
      },
    ],
    "date": "2026-09-22",
    "deload": false,
    "estimated_min": 40,
    "readiness": {
      "band": "as_planned",
      "score": 75,
      "source": "default",
    },
    "title": "VO2 intervals",
    "type": "vo2",
    "why": "VO2 day. Readiness 75 — run it as written. The single highest-leverage session for lifespan.",
  },
  "warnings": [],
  "week": [
    {
      "date": "2026-09-22",
      "minutes": 40,
      "type": "vo2",
    },
    {
      "date": "2026-09-23",
      "minutes": 30.8,
      "type": "strength",
    },
    {
      "date": "2026-09-24",
      "minutes": 40,
      "type": "zone2",
    },
    {
      "date": "2026-09-25",
      "minutes": 40,
      "type": "power",
    },
    {
      "date": "2026-09-26",
      "minutes": 40,
      "type": "mobility",
    },
    {
      "date": "2026-09-27",
      "minutes": 40,
      "type": "power",
    },
    {
      "date": "2026-09-28",
      "minutes": 40,
      "type": "strength",
    },
  ],
  "weekly": {
    "mobility_sessions": 0,
    "plyo_contacts": 0,
    "sessions": 0,
    "steps_avg": undefined,
    "strength_min": 0,
    "strength_target_min": [
      60,
      120,
    ],
    "tonnage_lb": 0,
    "vo2_sessions": 0,
    "zone2_ceiling_min": 60,
    "zone2_min": 0,
    "zone2_target_min": 180,
  },
}
`;

exports[`golden plans > fifteen_min_home is unchanged 1`] = `
{
  "blocked_regions": [],
  "signature": "0900ecd1",
  "today": {
    "blocks": [
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "warmup",
        "minutes": 3,
        "title": "Warm-up",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "mcgill-curl-up",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "bird-dog",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "strength",
        "minutes": 1.5,
        "title": "Core",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "side-plank",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "mobility",
        "minutes": 0.75,
        "title": "McGill Big 3",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "couch-stretch",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "deep-squat-hold",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "elephant-walk",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "thoracic-opener",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "mobility",
        "minutes": 4.5,
        "title": "Mobility",
      },
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "cooldown",
        "minutes": 2,
        "title": "Cool-down",
      },
    ],
    "date": "2026-09-22",
    "deload": false,
    "estimated_min": 11.8,
    "readiness": {
      "band": "as_planned",
      "score": 78.7,
      "source": "blend",
    },
    "title": "Mobility",
    "type": "mobility",
    "why": "Mobility. Readiness 79 — run it as written. 0 of 2 mobility sessions this week.",
  },
  "warnings": [],
  "week": [
    {
      "date": "2026-09-22",
      "minutes": 11.8,
      "type": "mobility",
    },
    {
      "date": "2026-09-23",
      "minutes": 12.5,
      "type": "kot",
    },
    {
      "date": "2026-09-24",
      "minutes": 15,
      "type": "zone2",
    },
    {
      "date": "2026-09-25",
      "minutes": 12.5,
      "type": "kot",
    },
    {
      "date": "2026-09-26",
      "minutes": 15,
      "type": "zone2",
    },
    {
      "date": "2026-09-27",
      "minutes": 15,
      "type": "zone2",
    },
    {
      "date": "2026-09-28",
      "minutes": 12.5,
      "type": "kot",
    },
  ],
  "weekly": {
    "mobility_sessions": 0,
    "plyo_contacts": 0,
    "sessions": 1,
    "steps_avg": 7500,
    "strength_min": 40,
    "strength_target_min": [
      60,
      120,
    ],
    "tonnage_lb": 10950,
    "vo2_sessions": 0,
    "zone2_ceiling_min": 55,
    "zone2_min": 25,
    "zone2_target_min": 180,
  },
}
`;

exports[`golden plans > high_readiness is unchanged 1`] = `
{
  "blocked_regions": [],
  "signature": "b6f8e813",
  "today": {
    "blocks": [
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "warmup",
        "minutes": 5,
        "title": "Warm-up",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "bird-dog",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "mcgill-curl-up",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "strength",
        "minutes": 1.5,
        "title": "Core",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "side-plank",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "mobility",
        "minutes": 0.75,
        "title": "McGill Big 3",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "couch-stretch",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "deep-squat-hold",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "mobility",
        "minutes": 3,
        "title": "Mobility",
      },
      {
        "cardio": {
          "bpm": [
            158,
            177,
          ],
          "minutes": 28,
          "modality": "run",
          "structure": "intervals",
        },
        "exercises": [],
        "kind": "conditioning",
        "minutes": 28,
        "title": "4 × 4 min",
      },
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "cooldown",
        "minutes": 5,
        "title": "Cool-down",
      },
    ],
    "date": "2026-09-22",
    "deload": false,
    "estimated_min": 43.3,
    "readiness": {
      "band": "push",
      "score": 94.4,
      "source": "blend",
    },
    "title": "VO2 intervals",
    "type": "vo2",
    "why": "VO2 day. Readiness 94 — green light, take the extra set. The single highest-leverage session for lifespan.",
  },
  "warnings": [],
  "week": [
    {
      "date": "2026-09-22",
      "minutes": 43.3,
      "type": "vo2",
    },
    {
      "date": "2026-09-23",
      "minutes": 50.4,
      "type": "kot",
    },
    {
      "date": "2026-09-24",
      "minutes": 55,
      "type": "zone2",
    },
    {
      "date": "2026-09-25",
      "minutes": 50.4,
      "type": "kot",
    },
    {
      "date": "2026-09-26",
      "minutes": 41.8,
      "type": "mobility",
    },
    {
      "date": "2026-09-27",
      "minutes": 48.3,
      "type": "power",
    },
    {
      "date": "2026-09-28",
      "minutes": 41.8,
      "type": "mobility",
    },
  ],
  "weekly": {
    "mobility_sessions": 0,
    "plyo_contacts": 0,
    "sessions": 1,
    "steps_avg": 7500,
    "strength_min": 40,
    "strength_target_min": [
      60,
      120,
    ],
    "tonnage_lb": 10950,
    "vo2_sessions": 0,
    "zone2_ceiling_min": 55,
    "zone2_min": 25,
    "zone2_target_min": 180,
  },
}
`;

exports[`golden plans > injury_flare is unchanged 1`] = `
{
  "blocked_regions": [],
  "signature": "0711178f",
  "today": {
    "blocks": [
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "warmup",
        "minutes": 5,
        "title": "Warm-up",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "bird-dog",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "mcgill-curl-up",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "strength",
        "minutes": 1.5,
        "title": "Core",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "side-plank",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "mobility",
        "minutes": 0.75,
        "title": "McGill Big 3",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "couch-stretch",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "deep-squat-hold",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "mobility",
        "minutes": 3,
        "title": "Mobility",
      },
      {
        "cardio": {
          "bpm": [
            158,
            177,
          ],
          "minutes": 28,
          "modality": "run",
          "structure": "intervals",
        },
        "exercises": [],
        "kind": "conditioning",
        "minutes": 28,
        "title": "4 × 4 min",
      },
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "cooldown",
        "minutes": 5,
        "title": "Cool-down",
      },
    ],
    "date": "2026-09-22",
    "deload": false,
    "estimated_min": 43.3,
    "readiness": {
      "band": "as_planned",
      "score": 77.9,
      "source": "blend",
    },
    "title": "VO2 intervals",
    "type": "vo2",
    "why": "VO2 day. Readiness 78 — run it as written. The single highest-leverage session for lifespan.",
  },
  "warnings": [],
  "week": [
    {
      "date": "2026-09-22",
      "minutes": 43.3,
      "type": "vo2",
    },
    {
      "date": "2026-09-23",
      "minutes": 50.4,
      "type": "kot",
    },
    {
      "date": "2026-09-24",
      "minutes": 55,
      "type": "zone2",
    },
    {
      "date": "2026-09-25",
      "minutes": 50.4,
      "type": "kot",
    },
    {
      "date": "2026-09-26",
      "minutes": 41.8,
      "type": "mobility",
    },
    {
      "date": "2026-09-27",
      "minutes": 44.3,
      "type": "power",
    },
    {
      "date": "2026-09-28",
      "minutes": 50.4,
      "type": "kot",
    },
  ],
  "weekly": {
    "mobility_sessions": 0,
    "plyo_contacts": 0,
    "sessions": 1,
    "steps_avg": 7500,
    "strength_min": 40,
    "strength_target_min": [
      60,
      120,
    ],
    "tonnage_lb": 10950,
    "vo2_sessions": 0,
    "zone2_ceiling_min": 55,
    "zone2_min": 25,
    "zone2_target_min": 180,
  },
}
`;

exports[`golden plans > low_readiness is unchanged 1`] = `
{
  "blocked_regions": [],
  "signature": "e5d2595c",
  "today": {
    "blocks": [
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "mcgill-curl-up",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "side-plank",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "bird-dog",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "mobility",
        "minutes": 2.25,
        "title": "McGill Big 3",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "couch-stretch",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "deep-squat-hold",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "elephant-walk",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "thoracic-opener",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "mobility",
        "minutes": 4.5,
        "title": "Recovery",
      },
      {
        "cardio": {
          "bpm": [
            93,
            112,
          ],
          "minutes": 30,
          "modality": "walk",
          "structure": "steady",
        },
        "exercises": [],
        "kind": "zone2",
        "minutes": 30,
        "title": "Easy walk",
      },
    ],
    "date": "2026-09-22",
    "deload": true,
    "estimated_min": 36.8,
    "readiness": {
      "band": "recovery",
      "score": 44.8,
      "source": "blend",
    },
    "title": "Recovery",
    "type": "recovery",
    "why": "Recovery day. Deload week — 7-day readiness averaging 62 — below 65.. Readiness 45 — today is mobility, an easy walk, and breathing.",
  },
  "warnings": [],
  "week": [
    {
      "date": "2026-09-22",
      "minutes": 36.8,
      "type": "recovery",
    },
    {
      "date": "2026-09-23",
      "minutes": 41.7,
      "type": "kot",
    },
    {
      "date": "2026-09-24",
      "minutes": 55,
      "type": "zone2",
    },
    {
      "date": "2026-09-25",
      "minutes": 41.7,
      "type": "kot",
    },
    {
      "date": "2026-09-26",
      "minutes": 43.3,
      "type": "vo2",
    },
    {
      "date": "2026-09-27",
      "minutes": 48.3,
      "type": "power",
    },
    {
      "date": "2026-09-28",
      "minutes": 55,
      "type": "strength",
    },
  ],
  "weekly": {
    "mobility_sessions": 0,
    "plyo_contacts": 0,
    "sessions": 1,
    "steps_avg": 7500,
    "strength_min": 40,
    "strength_target_min": [
      60,
      120,
    ],
    "tonnage_lb": 10950,
    "vo2_sessions": 0,
    "zone2_ceiling_min": 55,
    "zone2_min": 25,
    "zone2_target_min": 180,
  },
}
`;

exports[`golden plans > ninety_min_pf is unchanged 1`] = `
{
  "blocked_regions": [],
  "signature": "78232910",
  "today": {
    "blocks": [
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "warmup",
        "minutes": 5,
        "title": "Warm-up",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "mcgill-curl-up",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "side-plank",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "bird-dog",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "mobility",
        "minutes": 2.25,
        "title": "McGill Big 3",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "couch-stretch",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "deep-squat-hold",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "mobility",
        "minutes": 3,
        "title": "Mobility",
      },
      {
        "cardio": {
          "bpm": [
            158,
            177,
          ],
          "minutes": 28,
          "modality": "run",
          "structure": "intervals",
        },
        "exercises": [],
        "kind": "conditioning",
        "minutes": 28,
        "title": "4 × 4 min",
      },
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "cooldown",
        "minutes": 5,
        "title": "Cool-down",
      },
    ],
    "date": "2026-09-22",
    "deload": false,
    "estimated_min": 43.3,
    "readiness": {
      "band": "as_planned",
      "score": 82.9,
      "source": "blend",
    },
    "title": "VO2 intervals",
    "type": "vo2",
    "why": "VO2 day. Readiness 83 — run it as written. The single highest-leverage session for lifespan.",
  },
  "warnings": [],
  "week": [
    {
      "date": "2026-09-22",
      "minutes": 43.3,
      "type": "vo2",
    },
    {
      "date": "2026-09-23",
      "minutes": 64.5,
      "type": "kot",
    },
    {
      "date": "2026-09-24",
      "minutes": 70.3,
      "type": "zone2",
    },
    {
      "date": "2026-09-25",
      "minutes": 64.5,
      "type": "kot",
    },
    {
      "date": "2026-09-26",
      "minutes": 29.2,
      "type": "strength",
    },
    {
      "date": "2026-09-27",
      "minutes": 29.3,
      "type": "power",
    },
    {
      "date": "2026-09-28",
      "minutes": 16.8,
      "type": "mobility",
    },
  ],
  "weekly": {
    "mobility_sessions": 0,
    "plyo_contacts": 0,
    "sessions": 1,
    "steps_avg": 7500,
    "strength_min": 40,
    "strength_target_min": [
      60,
      120,
    ],
    "tonnage_lb": 10950,
    "vo2_sessions": 0,
    "zone2_ceiling_min": 55,
    "zone2_min": 25,
    "zone2_target_min": 180,
  },
}
`;

exports[`the worked example in docs/ENGINE.md > is unchanged 1`] = `
{
  "blocked_regions": [
    "hips_glutes",
    "knees_quads",
    "low_back",
    "posterior_chain",
  ],
  "signature": "934e06f6",
  "today": {
    "blocks": [
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "warmup",
        "minutes": 5,
        "title": "Warm-up",
      },
      {
        "cardio": {
          "bpm": [
            164,
            177,
          ],
          "minutes": 30,
          "modality": "run",
          "structure": "intervals",
        },
        "exercises": [],
        "kind": "conditioning",
        "minutes": 30,
        "title": "8 × 2 min",
      },
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "cooldown",
        "minutes": 5,
        "title": "Cool-down",
      },
    ],
    "date": "2026-09-22",
    "deload": false,
    "estimated_min": 40,
    "readiness": {
      "band": "as_planned",
      "score": 72,
      "source": "oura",
    },
    "title": "VO2 intervals",
    "type": "vo2",
    "why": "VO2 day. Readiness 72 — run it as written. The single highest-leverage session for lifespan.",
  },
  "warnings": [],
  "week": [
    {
      "date": "2026-09-22",
      "minutes": 40,
      "type": "vo2",
    },
    {
      "date": "2026-09-23",
      "minutes": 41.1,
      "type": "kot",
    },
    {
      "date": "2026-09-24",
      "minutes": 40,
      "type": "zone2",
    },
    {
      "date": "2026-09-25",
      "minutes": 41.1,
      "type": "kot",
    },
    {
      "date": "2026-09-26",
      "minutes": 40,
      "type": "mobility",
    },
    {
      "date": "2026-09-27",
      "minutes": 40,
      "type": "zone2",
    },
    {
      "date": "2026-09-28",
      "minutes": 41.1,
      "type": "kot",
    },
  ],
  "weekly": {
    "mobility_sessions": 0,
    "plyo_contacts": 0,
    "sessions": 2,
    "steps_avg": 7500,
    "strength_min": 85,
    "strength_target_min": [
      60,
      120,
    ],
    "tonnage_lb": 14560,
    "vo2_sessions": 0,
    "zone2_ceiling_min": 55,
    "zone2_min": 47,
    "zone2_target_min": 180,
  },
}
`;
